2012-04-12 Jesse Kornblum <research@jessekornblum.com>:

	* Makefile.am: LF to CR/LF change now done by zip program
	* ssdeep.h: Adding Doxygen comments
	* match.cpp: Fixed bug in Win32 filename construction
	* fuzzy.h: Cleanup and commenting

2012-04-11 Jesse Kornblum <research@jessekornblum.com>:

	* Experimental conversion to C++
	* Commented out all references to clustering
	* main.cpp: Fixed some bugs in the command line argument processing

2012-02-16 Jesse Kornblum <research@jessekornblum.com>:

	* main.c: Bump copyright to 2012 in usage message. Add flag for clustering
	* main.h: Added mode_cluster
	* ui.c: Changed Win32 to use fputc instead of _tfprintf for filenames
	

2011-10-17 Jesse Kornblum:

	* configure.ac: Added AC_SYS_LARGEFILE to handle large files
	on 32-bit platforms. See bug 3416762.

	
2011-09-30 Jesse Kornblum:

	* ui.c: Redirected error messages to stderr instead of stdout
	* main.c: Added warning message when the program does not
	process any file large enough to produce meaningful results.
	

2011-09-27 Jesse Kornblum

	* main.c: Added support to process stdin.
	* dig.c: Added process_stdin function
	* engine.c: Generalized display functions in display_result.
	

2011-08-19 Jesse Kornblum

	* edit_dist.c: Accepted patch from Brad Spengler to make
	  thread safe.
	

2010-07-15 Jesse Kornblum

	* Added quotes and quote escaping to filenames when
	  displayed in CSV matching mode.

	* Modified FILEFORMAT to reflect quotation marks in filenames.
	

2010-06-24 Jesse Kornblum

	* Added parameter checking to my_basename.
	

2010-05-05 Jesse Kornblum

	* Changed logic for reading files of known hashes to look for
	  the header this version of the program writes instead of 
	  the v1 header. This was done for the DC3 branch of the code.

	* Updated README documentation and published version 2.5.
	

2010-03-20 Jesse Kornblum

	* Fixed define in fuzzy.h to only allow one compilation
	

2010-03-19 Jesse Kornblum
